# MARC-Flight-Computers

./: PlotData.py
GPS Reciever/src/: main.cpp
GPS Transmitter/: platformio.ini
GPS Transmitter/src/: main.cpp
ground-station/: 2022-04-09-11-22-48-ground-station - Copy.csv  Cargo.toml
ground-station/src/: main.rs
ground-station/ui/: appwindow.60
