[package]
name = "ground-station"
version = "0.1.0"
authors = ["Ethan <edv121@outlook.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
sixtyfps = "0.1.5"
serialport = "*"

[build-dependencies]
sixtyfps-build = "0.1.5"
